<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <!-- Spring Boot 4.0 (JDK 25 ready) - 目前使用 3.4.x 相容 JDK 21 -->
        <version>3.4.4</version>
        <relativePath/>
    </parent>

    <groupId>com.steven</groupId>
    <artifactId>asset-management</artifactId>
    <version>1.0.0</version>
    <name>asset-management</name>
    <description>Personal Asset Management System</description>

    <properties>
        <java.version>21</java.version>
        <!--
          Task 252：測試 JVM 的額外參數。surefire 的 argLine 只能有一個值，命令列直接下
          -DargLine=... 會**覆蓋**掉時區設定；故把可變的部分抽成本 property 供疊加。
          例（本機 JDK 為 25 時跑 Mockito 需要）：
            mvn test -DextraArgLine=-Dnet.bytebuddy.experimental=true
        -->
        <extraArgLine></extraArgLine>
        <!--
          Spring Boot 3.4.4 管理的 testcontainers.version 預設 1.20.6，其內建 docker-java
          對 Docker Engine 送出的探測請求版本低於本機 Docker Desktop 目前回報的 MinAPIVersion
          （已實測為 1.40，本機 Engine 29.7.2）。低於下限的請求 Docker Desktop 不會回正常錯誤，
          而是回一個欄位全空、只帶 com.docker.desktop.address 提示的 200/400 混合假回應，
          導致 DockerClientProviderStrategy 三種策略全部誤判為「找不到有效 Docker 環境」
          （症狀：curl 打同一個 socket 正常，Testcontainers 卻找不到 Docker）。
          升級到 1.21.4（同大版號最新，未跨到有破壞性變更的 2.x）已實測修復，不需改動任何
          程式碼或 ~/.testcontainers.properties。
        -->
        <testcontainers.version>1.21.4</testcontainers.version>
    </properties>

    <dependencies>
        <!-- Spring Boot -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <!-- 多租戶 owner 過濾切面（Requirement 28） -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>

        <!-- Database -->
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.liquibase</groupId>
            <artifactId>liquibase-core</artifactId>
        </dependency>

        <!-- Excel -->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi-ooxml</artifactId>
            <version>5.3.0</version>
        </dependency>

        <!-- 走勢圖 PNG（警示 email 內嵌）：純 Java 繪圖，server-side 渲染，無外部服務依賴 -->
        <dependency>
            <groupId>org.knowm.xchart</groupId>
            <artifactId>xchart</artifactId>
            <version>3.8.8</version>
        </dependency>

        <!-- Anthropic Java SDK：今日股市分析（Requirement 31）呼叫 Claude Opus 4.8 + web_search -->
        <dependency>
            <groupId>com.anthropic</groupId>
            <artifactId>anthropic-java</artifactId>
            <version>2.34.0</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <optional>true</optional>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testcontainers</groupId>
            <artifactId>postgresql</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.38</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <!--
                  Requirement 53 / Task 252：測試 JVM 的時區必須與正式環境（容器 TZ=Asia/Taipei）一致，
                  否則會出現「本機測試過、容器行為不同」的時區問題。
                  額外參數走 ${extraArgLine} 疊加，**不要**在命令列直接下 -DargLine=...（那會覆蓋掉時區）：
                    mvn test -DextraArgLine=-Dnet.bytebuddy.experimental=true
                -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Duser.timezone=Asia/Taipei ${extraArgLine}</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
